<resources>
    <string name="app_name">The Language Project</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_signout">Sign Out</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? register now!</string>
    <string name="btn_link_to_login">Already registered?</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Go back></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We require your Email to sent you password reset instructions.</string>
    <string name="search">Search</string>
    <string name="play">Play</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="record">Record</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="todo">TODO</string>
    <string name="capture">Capture</string>
    <string name="word_of_the_day">Word of the Day</string>

    <string name="IPA_i">i</string>
    <string name="IPA_ɪ">ɪ</string>
    <string name="IPA_e">e</string>
    <string name="IPA_ə">ə</string>
    <string name="IPA_ɜ">ɜ</string>
    <string name="IPA_u">u</string>
    <string name="IPA_ʊ">ʊ</string>
    <string name="IPA_ɔ">ɔ</string>
    <string name="IPA_ɒ">ɒ</string>
    <string name="IPA_ɑ">ɑ</string>
    <string name="IPA_ʌ">ʌ</string>
    <string name="IPA_æ">æ</string>
    <string name="IPA_ɛ">ɛ</string>
    <string name="IPA_a">a</string>
    <string name="IPA_o">o</string>
    <string name="stop">Stop</string>
    <string name="how_did_i_do">How did I do?</string>
    <string name="you_think_you_can_pronounce_it">You think you can pronounce it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
